Added support for disabled checks and custom targets.
Since custom targets don't have their sources added to a compilation
database, we need to do the heavy lifting there ourselves. Generate
a "compilation database" for each source file added in the directory
${CMAKE_CURRENT_BINARY_DIR}/${TARGET}_compile_commands and point
clang-tidy to that.

This means that we need to create the "compilation database" with
reasonable accuracy - the language of each file must be detected
as far as possible and the appropriate defines, includes and
compiler flags be passed.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cmake-unit"]
 	path = cmake-unit
 	url = git://github.com/polysquare/cmake-unit
+[submodule "determine-header-language"]
+	path = determine-header-language
+	url = git://github.com/polysquare/cmake-determine-header-language
