Ensure that a fake compilation database is generated for headers on targets.
Header files specified on a target won't be added to compile_commands.json
but we might want to run clang-tidy on them. Add them to
${TARGET}_compile_commands/compile_commands.json and run clang-tidy with that.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,6 +66,8 @@ add_cmake_build_test (ClangTidyAllowWarningsOption
                       ClangTidyAllowWarningsOptionVerify)
 add_cmake_build_test (ClangTidyGenerateSpecialCompilationDB
                       ClangTidyGenerateSpecialCompilationDBVerify)
+add_cmake_build_test (ClangTidyGenerateSpecialCompilationDBForRealTargetHeaders
+                      ClangTidyGenerateSpecialCompilationDBForRealTargetHeadersVerify)
 add_cmake_build_test (ClangTidySpecialCompilationDBIncludes
                       ClangTidySpecialCompilationDBIncludesVerify)
 add_cmake_build_test (ClangTidySpecialCompilationDBDefines
