Add FindClangTidy.cmake based on tooling-find-package-cmake-util.
Implement _validate_clang_tidy in respect of it.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,6 +57,9 @@ bootstrap_cmake_unit (INITIAL_CACHE_CONTENTS
 
 add_cmake_test (TurnCMakeExportCompileCommandsOn)
 
+add_cmake_build_test (ClangTidyVersionDetectedOnValidate
+                      ClangTidyVersionDetectedOnValidateVerify
+                      NO_CLEAN)
 add_cmake_build_test (ClangTidyOnTargetSources
                       ClangTidyOnTargetSourcesVerify)
 add_cmake_build_test (ClangTidyNoCheckGenerated
