Update submodules and cmake-unit

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,25 +20,10 @@ get_filename_component (CLANG_TIDY_CMAKE_DIRECTORY
 set (CMAKE_UNIT_DIRECTORY
      ${CLANG_TIDY_CMAKE_DIRECTORY}/cmake-unit)
 
-set (CLANG_TIDY_INITIAL_CACHE_CONTENTS
-     "set (CMAKE_C_COMPILER\n"
-     "     ${CMAKE_C_COMPILER}\n"
-     "     CACHE STRING \"\" FORCE)\n"
-     "set (CMAKE_CXX_COMPILER\n"
-     "     ${CMAKE_CXX_COMPILER}\n"
-     "     CACHE STRING \"\" FORCE)\n")
-
 set (CMAKE_MODULE_PATH
      ${CMAKE_UNIT_DIRECTORY}
      ${CLANG_TIDY_CMAKE_DIRECTORY}
      ${CMAKE_MODULE_PATH})
-
-foreach (PATH ${CMAKE_MODULE_PATH})
-     set (CLANG_TIDY_INITIAL_CACHE_CONTENTS
-          "${CLANG_TIDY_INITIAL_CACHE_CONTENTS}\n"
-          "set (CMAKE_MODULE_PATH ${PATH} \${CMAKE_MODULE_PATH}\n"
-          "     CACHE STRING \"\" FORCE)\n")
-endforeach ()
 
 # Include ClangTidy to determine whether we can run the tests.
 include (ClangTidy)
@@ -52,8 +37,9 @@ endif (NOT CONTINUE)
 
 include (CMakeUnitRunner)
 
-bootstrap_cmake_unit (INITIAL_CACHE_CONTENTS
-                      CLANG_TIDY_INITIAL_CACHE_CONTENTS)
+bootstrap_cmake_unit (VARIABLES CMAKE_MODULE_PATH
+                                CMAKE_C_COMPILER
+                                CMAKE_CXX_COMPILER)
 
 add_cmake_test (TurnCMakeExportCompileCommandsOn)
 
