biicode: Add parent and dependencies entries

--- a/biicode.conf
+++ b/biicode.conf
@@ -3,19 +3,21 @@
 [requirements]
 	 smspillaz/cmake-unit: 0
 	 smspillaz/tooling-cmake-util: 0
-     smspillaz/tooling-find-pkg-util: 0
+	 smspillaz/tooling-find-pkg-util: 0
 
 [paths]
     # Local directories to look for headers (within block)
     # /
     # include
 
+[parent]
+	 smspillaz/clang-tidy-target-cmake:0
 
 [dependencies]
     # Manual adjust file implicit dependencies, add (+), remove (-), or overwrite (=)
     # hello.h + hello_imp.cpp hello_imp2.cpp
     # *.h + *.cpp
-    ClangTidy.cmake + util/ClangTidyExitStatusWrapper.cmake
+    ClangTidy.cmake + util/ClangTidyExitStatusWrapper.cmake + FindCLANGTIDY.cmake
 
 [mains]
     # Manual adjust of files that define an executable
