--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,22 +4,10 @@
 #
 # See /LICENCE.md for Copyright information
 
-if (NOT CMAKE_SCRIPT_MODE_FILE)
-
-    project (ClangTidyTest NONE)
-    set (NEW_POLICIES CMP0025 CMP0056)
-
-    foreach (POLICY ${NEW_POLICIES})
-
-        if (POLICY ${POLICY})
-
-            cmake_policy (SET ${POLICY} NEW)
-
-        endif ()
-
-    endforeach ()
-
-endif ()
+include ("${CMAKE_CURRENT_LIST_DIR}/conanbuildinfo.cmake")
+set (CMAKE_MODULE_PATH
+     ${CONAN_CMAKE_MODULE_PATH}  # NOLINT:correctness/quotes
+     ${CMAKE_MODULE_PATH})  # NOLINT:correctness/quotes
 
 cmake_minimum_required (VERSION 2.8)
 
@@ -29,8 +17,8 @@ set (CMAKE_MODULE_PATH
      "${CMAKE_MODULE_PATH}"
      "${CMAKE_CURRENT_LIST_DIR}")
 
-include ("smspillaz/cmake-unit/CMakeUnitRunner")
-include ("smspillaz/cmake-unit/CMakeUnit")
+include ("cmake/cmake-unit/CMakeUnitRunner")
+include ("cmake/cmake-unit/CMakeUnit")
 include (ClangTidy)
 
 if (NOT CMAKE_SCRIPT_MODE_FILE)
