--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,21 @@ sudo: false
 cache:
   directories:
   - container
+matrix:
+  include:
+  - os: linux
+    env: CMAKE_GENERATOR="Unix Makefiles" CMAKE_VERSION="latest" DEPLOY="1"
+  - os: linux
+    env: CMAKE_GENERATOR="Ninja" CMAKE_VERSION="latest"
+  - os: linux
+    env: CMAKE_GENERATOR="Unix Makefiles" CMAKE_VERSION="3.0"
+  - os: linux
+    env: CMAKE_GENERATOR="Ninja" CMAKE_VERSION="3.0"
+  - os: linux
+    env: CMAKE_GENERATOR="Unix Makefiles" CMAKE_VERSION="latest" COVERAGE="--use-cmake-coverage"
+  - os: osx
+    env: CMAKE_GENERATOR="Xcode" CMAKE_VERSION="latest"
 env:
-  matrix:
-  - CMAKE_GENERATOR="Unix Makefiles" CMAKE_VERSION="latest" DEPLOY="1"
-  - CMAKE_GENERATOR="Ninja" CMAKE_VERSION="latest"
-  - CMAKE_GENERATOR="Unix Makefiles" CMAKE_VERSION="3.0"
-  - CMAKE_GENERATOR="Ninja" CMAKE_VERSION="3.0"
-  - CMAKE_GENERATOR="Unix Makefiles" CMAKE_VERSION="latest" COVERAGE="--use-cmake-coverage"
   global:
   - secure: U1V3s1mvi8iAQSJoOFlLHgvJxyvOZ++8FC2KPn+u/8R8c0UhcZGALsRs9JpCetTME8gL6hv76BGnXdydP4iwMJtniH5tuPRAkoy+TYrDOZ9YJMNCDdgd63mhD9bGMkVEX6+3PREG11VZvOv1se9Mue3oJD0edgnNj3JQXA4r7zg=
   - secure: K+0q5f6ylInJE6DvrxWwPh502cIPPp/uUdx2kxiwFqierFQxWkyGyVTsPpjDmo+tR68dkBYmIQBElkDx2MgmQIrrLvSfvDtj+A1afk9NLkytQf3umvAFi5xv2fl+ZH5Ac326IO/RuNBx3Wx3IqhDeo91W+0JNEo5cc7LD9hKZXk=
