--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set (CMAKE_MODULE_PATH
      "${CMAKE_MODULE_PATH}"
      "${CMAKE_CURRENT_LIST_DIR}")
 
-include ("cmake/cmake-module-common/Common")
+include ("cmake/cmake-module-common/Common" OPTIONAL)
 include (ClangTidy)
 
 if (NOT CMAKE_SCRIPT_MODE_FILE)
@@ -1070,6 +1070,10 @@ set (MARKDOWN_FILES
      "${CMAKE_CURRENT_LIST_DIR}/LICENCE.md"
      "${CMAKE_CURRENT_LIST_DIR}/README.md")
 
-cmake_module_add_common_targets (NAMESPACE "clang_tidy"
-                                 CMAKE_FILES ${CMAKE_FILES}
-                                 DOCUMENTATION_FILES ${MARKDOWN_FILES})
+if (COMMAND cmake_module_add_common_targets)
+
+    cmake_module_add_common_targets (NAMESPACE "clang_tidy"
+                                     CMAKE_FILES ${CMAKE_FILES}
+                                     DOCUMENTATION_FILES ${MARKDOWN_FILES})
+
+endif ()
